# pyfitit-gui

./: .pre-commit-config.yaml  README.md  index.html  pyfitit_gui.html  pyproject.toml  search.js
.github/workflows/: pdoc.yml  pre_commit_and_pylint.yml  pypi.yml
pyfitit-gui/: backend.py  datatypes.py  frontend.py  main.py
pyfitit_gui/: datatypes.html  datatypes.py  deformation_dialog.html  deformation_dialog.py  main.html  main.py  main_window.html  main_window.py  templates.html
pyfitit_gui/templates/: project.template
src/pyfitit_gui/: datatypes.py  deformation_dialog.py  main_window.py
src/pyfitit_gui/templates/: project.template
templates/: project.template
