[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['pyfitit_gui']

[tool.setuptools.package-data]
"*" = ["*.template"]

[project]
name = "pyfitit_gui"
dependencies = [
    "pyfitit",
    "PyQT5",
]
readme = "README.md"
authors = [
    {name = "Michał Wroński", email = "mwronski@student.agh.edu.pl"}
]
license = "GPL-3.0"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Sfonxu/pyfitit-gui"
Documentation = "https://sfonxu.github.io/pyfitit-gui/"
Repository = "https://github.com/Sfonxu/pyfitit-gui.git"
Tracker = "https://github.com/Sfonxu/pyfitit-gui/issues"


[project.scripts]
pyfitit-gui = "pyfitit_gui.main:main"
